# locallab-stack

./: .gitignore  0000-rust-cli-skeleton.md  0001-manifest-path-model.md  0002-init-command.md  0003-template-app-create.md  0005-hosts-planning.md  0006-docker-compose-integration.md  0007-certificate-integration.md  0009-migration-import-assistance.md  Cargo.toml  README.md  plan.md
dev_docs/: 0001-manifest-path-model.md  0003-template-app-create.md  0004-gateway-rendering.md  0006-docker-compose-integration.md  0007-certificate-integration.md  0008-hosts-sync.md  0009-migration-import-assistance.md  0010-stabilization-release.md
src/: cert.rs  cli.rs  compose.rs  config.rs  gateway.rs  hosts.rs  main.rs  manifest.rs  template.rs  workspace.rs
src/commands/: app.rs  cert.rs  doctor.rs  gateway.rs  hosts.rs  init.rs  mod.rs  stack.rs  status.rs  template.rs
tests/: cli.rs
