[package]
name = "locallab-stack"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "llstk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
